--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -679,10 +679,11 @@
   }
 
   a {
-    color: $secondary-text-color;
-    text-decoration: none;
+    color: #4ea2df;
+    text-decoration: underline;
 
     &:hover {
+      color: lighten(#4ea2df, 10%);
       text-decoration: underline;
 
       .fa {
@@ -691,6 +692,8 @@
     }
 
     &.mention {
+      color: $secondary-text-color;
+      text-decoration: none;
       &:hover {
         text-decoration: none;
 
@@ -2475,7 +2478,7 @@ a.status-card {
   display: block;
   font-weight: 500;
   margin-bottom: 5px;
-  color: $darker-text-color;
+  color: #4ea2df;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
